[gd_scene load_steps=43 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/shotgun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/cliffGrey_top.tscn" type="PackedScene" id=4]
[ext_resource path="res://Materials/Ground030_2K_Displacement.jpg" type="Texture" id=5]
[ext_resource path="res://Scenes/crate.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/key.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/sphere_tank.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Tank.gd" type="Script" id=9]
[ext_resource path="res://Scripts/EnemyBullets.gd" type="Script" id=10]
[ext_resource path="res://Materials/Ground030_2K_Normal.jpg" type="Texture" id=11]
[ext_resource path="res://Materials/Ground030_2K_AmbientOcclusion.jpg" type="Texture" id=12]
[ext_resource path="res://Materials/Ground030_2K_Color.jpg" type="Texture" id=13]
[ext_resource path="res://Materials/Ground030_2K_Roughness.jpg" type="Texture" id=14]
[ext_resource path="res://Scripts/Terrain.gd" type="Script" id=15]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Crate.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Key.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Instructions.gd" type="Script" id=19]
[ext_resource path="res://Materials/moonless_golf_2k.hdr" type="Texture" id=20]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 20 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_energy = 0.03
ambient_light_color = Color( 0.309804, 0.278431, 0.862745, 1 )
ambient_light_energy = 0.27
ambient_light_sky_contribution = 0.37

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 200, 200 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.0941176, 0.00784314, 0.00784314, 1 )
albedo_texture = ExtResource( 13 )
roughness_texture = ExtResource( 14 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 11 )
ao_enabled = true
ao_light_affect = 0.0
ao_texture = ExtResource( 12 )
ao_on_uv2 = false
ao_texture_channel = 0
depth_enabled = true
depth_scale = 0.05
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false
depth_texture = ExtResource( 5 )
uv1_scale = Vector3( 20, 20, 20 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -100.546, 0.546448, -100.546, -100.546, 0.546448, 100.546, 100.546, 0.546448, -100.546, 100.546, 0.546448, 100.546 )

[sub_resource type="CapsuleShape" id=6]
radius = 0.25
height = 0.5

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.2, 0.05, 0.2 )

[sub_resource type="PlaneMesh" id=8]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 0 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.905882, 0.203922, 0.203922, 1 )
emission_enabled = true
emission = Color( 0.439216, 0, 0, 1 )
emission_energy = 0.8
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=11]
radius = 0.005
height = 0.01

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0.0251256, 0.972973 ), 0.0, 0.0, 0, 0, Vector2( 0.984925, 0.0585586 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.991429 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="Curve" id=14]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.954774, -0.981982 ), 0.0, 0.0, 0, 0, Vector2( 1, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.254902, 0.227451, 0.227451, 1 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 0.25, 0.25, 0.25 )

[sub_resource type="SphereShape" id=17]

[sub_resource type="BoxShape" id=18]
extents = Vector3( 1.6, 1.8, 1.6 )

[sub_resource type="GIProbeData" id=19]
bounds = AABB( -120, -60, -120, 240, 120, 240 )
cell_size = 1.875
to_cell_xform = Transform( 0.533333, 0, 0, 0, 0.533333, 0, 0, 0, 0.533333, 64, 32, 64 )
dynamic_data = PoolIntArray( 0, 8, 128, 64, 128, 1, 0, 4, 268726336, 1, 268804928, 1, 13, 0, 268951552, 1, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0901961, 0.141176, 0.415686, 1 )

[sub_resource type="CanvasItemMaterial" id=21]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.0745098, 0.113725, 0.321569, 1 )

[node name="Game" type="Spatial"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Ground" type="StaticBody" parent="."]

[node name="Ground" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.013618, -0.00136352, 0.00621247 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 5 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.5, 0 )
shape = SubResource( 6 )

[node name="Feet" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
shape = SubResource( 7 )

[node name="Pivot" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="Camera" type="Camera" parent="Player/Pivot"]
current = true

[node name="Life" type="MeshInstance" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -0.2 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Shotgun" parent="Player/Pivot" instance=ExtResource( 2 )]
transform = Transform( -4, 0, -1.55766e-06, 0, 4, 0, 1.55766e-06, 0, -4, 0.2, -0.3, -0.4 )

[node name="Muzzle" type="Position3D" parent="Player/Pivot"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0.2, -0.269191, -0.554684 )

[node name="SpotLight" type="SpotLight" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.182603, -0.117561, -0.153015 )
light_color = Color( 0.568627, 0.745098, 0.831373, 1 )
light_energy = 15.0
light_indirect_energy = 0.2
light_specular = 0.0
spot_range = 10.0
spot_attenuation = 1.07177
spot_angle = 25.0

[node name="Flash" type="CPUParticles" parent="Player/Pivot"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0.194568, -0.271454, -0.554693 )
material_override = SubResource( 10 )
cast_shadow = 0
emitting = false
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 0.5
randomness = 0.5
mesh = SubResource( 11 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.1
initial_velocity_random = 0.5
linear_accel = 3.0
linear_accel_random = 0.5
radial_accel = 1.0
tangential_accel = 1.0
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )
hue_variation = 0.02
hue_variation_random = 0.47
hue_variation_curve = SubResource( 14 )

[node name="Smoke" type="CPUParticles" parent="Player/Pivot"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0.194568, -0.271454, -0.554693 )
material_override = SubResource( 15 )
cast_shadow = 0
emitting = false
amount = 100
lifetime = 0.4
one_shot = true
explosiveness = 0.1
randomness = 0.5
mesh = SubResource( 11 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.5
linear_accel_random = 0.5
radial_accel = 3.0
radial_accel_random = 0.7
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )
hue_variation = 0.02
hue_variation_random = 0.47
hue_variation_curve = SubResource( 14 )

[node name="Bullets" type="Spatial" parent="."]

[node name="EnemyBullets" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="EnemyBullets"]
one_shot = true

[node name="Terrain" type="Spatial" parent="."]
script = ExtResource( 15 )

[node name="Cliffs" type="Spatial" parent="."]

[node name="cliffGrey_top" parent="Cliffs" instance=ExtResource( 4 )]
transform = Transform( 120, 0, 0, 0, 20, 0, 0, 0, 30, 59.4427, 0, -67.182 )

[node name="cliffGrey_top2" parent="Cliffs" instance=ExtResource( 4 )]
transform = Transform( -1.95505e-05, 0, 30, 0, 20, 0, -120, 0, -4.88762e-06, 50.4184, -0.102264, -61.8325 )

[node name="cliffGrey_top3" parent="Cliffs" instance=ExtResource( 4 )]
transform = Transform( -120, 0, -1.16824e-05, 0, 20, 0, 4.67297e-05, 0, -30, -63.494, 0, 62.9154 )

[node name="cliffGrey_top4" parent="Cliffs" instance=ExtResource( 4 )]
transform = Transform( -5.24537e-06, 0, -30, 0, 20, 0, 120, 0, -1.31134e-06, -49.1872, 0, 56.5372 )

[node name="Items" type="Spatial" parent="."]

[node name="Crate" type="RigidBody" parent="Items"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0.379, 2.957 )
script = ExtResource( 17 )

[node name="CollisionShape" type="CollisionShape" parent="Items/Crate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
shape = SubResource( 16 )

[node name="crate" parent="Items/Crate" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5 )

[node name="Key" type="RigidBody" parent="Items"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 1, 5 )
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="Items/Key"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
shape = SubResource( 17 )

[node name="key" parent="Items/Key" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.423733, 0.139826, 0 )

[node name="Enemies" type="Spatial" parent="."]

[node name="Tank" type="KinematicBody" parent="Enemies"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -20, 1.2, 0 )
script = ExtResource( 9 )

[node name="sphere_tank" parent="Enemies/Tank" instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="Enemies/Tank"]
shape = SubResource( 18 )

[node name="Scanner" type="RayCast" parent="Enemies/Tank"]
enabled = true
cast_to = Vector3( 30, 0, 0 )

[node name="Scanner_r" type="RayCast" parent="Enemies/Tank"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.288 )
enabled = true
cast_to = Vector3( 30, 0, 0 )

[node name="Scanner_l" type="RayCast" parent="Enemies/Tank"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.346 )
enabled = true
cast_to = Vector3( 30, 0, 0 )

[node name="Timer" type="Timer" parent="Enemies/Tank"]
one_shot = true

[node name="Muzzle" type="Position3D" parent="Enemies/Tank"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.39113, 0, 0 )

[node name="Indicator" type="OmniLight" parent="Enemies/Tank"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.04568, 1.08621, 0.199204 )
light_energy = 3.0
omni_range = 2.0

[node name="GIProbe" type="GIProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, 0 )
extents = Vector3( 120, 60, 120 )
data = SubResource( 19 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.766045, 2.28299e-08, 0.642787, 0.31825, 0.86883, 0.379276, -0.558473, 0.49511, -0.665563, 48.3744, 38.691, -50 )
light_color = Color( 0.345098, 0.541176, 0.823529, 1 )
light_energy = 0.7

[node name="HUD" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="Time" type="Control" parent="HUD"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="HUD/Time"]
margin_left = 12.3744
margin_top = 8.13173
margin_right = 148.374
margin_bottom = 39.1317
text = "Time remaining:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="HUD/Time"]
margin_right = 158.0
margin_bottom = 35.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="HUD/Time"]
margin_left = 171.5
margin_top = 8.5
margin_right = 211.5
margin_bottom = 22.5
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "Key"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crate" type="Label" parent="HUD/Time"]
margin_left = 214.5
margin_top = 9.0
margin_right = 254.5
margin_bottom = 23.0
custom_colors/font_color = Color( 0.4, 0.4, 0.4, 1 )
text = "Crate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD"]
wait_time = 0.1

[node name="Lose" type="Control" parent="HUD"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Lose"]
margin_right = 1020.0
margin_bottom = 602.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Lose/HBoxContainer"]
margin_right = 1020.0
margin_bottom = 602.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 20 )
text = "You Lose!

It's game over, man, game over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Control" parent="HUD"]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Win"]
margin_right = 1020.0
margin_bottom = 602.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Win/HBoxContainer"]
margin_right = 1020.0
margin_bottom = 602.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 20 )
text = "You Win!

Great job!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Control" parent="HUD"]
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD/Instructions"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Instructions"]
material = SubResource( 21 )
margin_left = -9.0
margin_top = -9.0
margin_right = 1033.0
margin_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Instructions/HBoxContainer"]
margin_right = 1042.0
margin_bottom = 619.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 22 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.960784, 0, 0, 1 )
text = "You haven't got long, now, soldier.
Find the crate here.
Shoot the enemy tank.

Best be quick on your toes now."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="EnemyBullets/Timer" to="EnemyBullets" method="_on_Timer_timeout"]
[connection signal="timeout" from="Enemies/Tank/Timer" to="Enemies/Tank" method="_on_Timer_timeout"]
[connection signal="timeout" from="HUD/Timer" to="HUD" method="_on_Timer_timeout"]
[connection signal="timeout" from="HUD/Instructions/Timer" to="HUD/Instructions" method="_on_Timer_timeout"]
